<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".screens.details.DetailsFragment">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/empty_description"
        android:padding="@dimen/padding_small"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pokemon_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/pokemon_details_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pokemon_details_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <TextView
                android:id="@+id/pokemon_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSurface"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/pokemon_name_test" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/types_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_components"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_name_text_view" />

            <LinearLayout
                android:id="@+id/height_and_weight_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontally_details_screen"
                android:layout_marginTop="@dimen/margin_between_components"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/types_recycler_view">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/stats_image_size"
                        android:layout_height="@dimen/stats_image_size"
                        android:contentDescription="@string/empty_description"
                        android:src="@drawable/ic_height" />

                    <TextView
                        android:id="@+id/pokemon_height_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        tools:text="@string/pokemon_height_test" />
                </LinearLayout>

                <View
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/stats_image_size"
                        android:layout_height="@dimen/stats_image_size"
                        android:contentDescription="@string/empty_description"
                        android:src="@drawable/ic_weight" />

                    <TextView
                        android:id="@+id/pokemon_weight_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        tools:text="@string/pokemon_weight_test" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontally_details_screen"
                android:layout_marginVertical="@dimen/margin_between_components"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_and_weight_stats">

                <TextView
                    android:id="@+id/base_stats_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/base_stats"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/arrow_back" />

                <com.abelvolpi.pokemonapi.presentation.customviews.CustomHorizontalProgressView
                    android:id="@+id/hpProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/custom_progress_margin_bottom"
                    app:progressColor="@color/fairy_color"
                    app:statsName="@string/hp_stat" />

                <com.abelvolpi.pokemonapi.presentation.customviews.CustomHorizontalProgressView
                    android:id="@+id/attackProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/custom_progress_margin_bottom"
                    app:progressColor="@color/ground_color"
                    app:statsName="@string/atk_stat" />

                <com.abelvolpi.pokemonapi.presentation.customviews.CustomHorizontalProgressView
                    android:id="@+id/defenseProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/custom_progress_margin_bottom"
                    app:progressColor="@color/water_color"
                    app:statsName="@string/def_stat" />

                <com.abelvolpi.pokemonapi.presentation.customviews.CustomHorizontalProgressView
                    android:id="@+id/speedProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/custom_progress_margin_bottom"
                    app:progressColor="@color/steel_color"
                    app:statsName="@string/spd_stat" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/pokemon_image_view"
        android:layout_width="@dimen/pokemon_large_image_size"
        android:layout_height="@dimen/pokemon_large_image_size"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/empty_description"
        android:transitionName="pokemon_details_image"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>